# learning-rag-via-project

./: .env.example  .gitignore  main.py  pyproject.toml
document-loaders/: page.py  pdf.py  splitter-pdf.py  splitter-reccursive.py  splitter.py  text-adv.txt  text.py  text.txt  text2.py
retriever/: arxiv_retriever.py  test-retriever.py
retriever/test-retriever-chroma-db/: chroma.sqlite3
src/: create_database.py
src/chroma-db-huggingface-endpoint/: chroma.sqlite3
src/chroma-db-huggingface-local/17098831-a20a-4352-9319-d87e0f748f1f/: index_metadata.pickle
src/chroma-db-mistral/5da2e4cf-63ca-4ce8-b59e-2e572fd6a81c/: index_metadata.pickle
src/chroma-db-ollama/: chroma.sqlite3
test-files/: text.txt
vector-store/: db.py
vector-store/chroma-db/: chroma.sqlite3
