[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=1.4.8",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "feedparser>=6.0.12",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.4",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "libmagic>=1.0",
    "pypdf>=6.12.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "tqdm>=4.67.3",
    "unstructured>=0.22.31",
]
